# bevy-heart

./: Cargo.toml  License  makefile  readme.md
assets/shaders/: heart.wgsl  prepass.wgsl
deploy/: Dockerfile  index.html
deploy/config/: nginx.conf
src/: camera.rs  heart.rs  main.rs
src/shaders/: utils.wgsl
